{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "a4fe45df-cfa2-4c44-878b-63bc7fc5d6df",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "70ca953d-84dc-4ffd-b95d-9cbe20acd402",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "e42c2e2f-7af3-4b5e-9159-08c7c51edf18",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c65ad95f-5e4c-4113-82bf-4731c618cb24",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e022a8aa-3524-49d3-a1d3-0611073d224d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cad11d6f-4313-4a14-b2e5-cb007e7981e4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cbe99db6-0cce-4f10-8e3b-3d0efa8d95d1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "30563be5-3699-44a8-b18e-78e0d7093516",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9376eb68-cad7-4ec7-b2d3-c6a5b4d410a1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "277f3eb9-b63d-4cd4-ae67-ec2f22c150e9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "6ae0adaa-cba1-4120-8e30-946033cf9574",
            "actions": [
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "6689face-a97b-46f2-8e00-d7308c6840e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "303c6f0c-7032-4931-911c-6421397793f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "9cebbbf4-c349-4455-a5b1-2372513cf164",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "0d4a616a-f57a-4c96-9e38-164369ee5310",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8807d72f-9790-42fe-8895-0702f4996639",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20104c18-380b-46d3-acf1-eb2bfb15f27d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d81b7ad-fc1a-42fb-baf3-26fa8d9e709e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5acee761-8c0e-4879-9ec4-dcc262768011",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5446339-5ac3-41df-b56f-ca2529064354",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Pause",
            "id": "9bc87ab0-cb90-480d-9e5e-27ccd0cd0ee1",
            "actions": [
                {
                    "name": "pauseKey",
                    "type": "Button",
                    "id": "3552d483-e2dd-439b-8989-64f69517e80e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bfb24111-4099-4147-838c-39387452a017",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pauseKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}